syntax = "proto3";

option go_package = "./pb";

package pb;

message User {
  uint64 Id = 1;
  string Name = 2;
  string NickName = 3;
  string Avatar = 4;
  string PassWord = 5;
  string Email = 6;
  string Mobile = 7;
  int64 Status = 8;
  string DefaultRouter = 9;
  string SideMode = 10;
  string TextColor = 11;
  string ActiveTextColor = 12;
  string CreateBy = 13;
  int64 CreateAt = 14;
  string UpdateBy = 15;
  int64 UpdateAt = 16;
  string DeleteBy = 17;
  int64 DeleteAt = 18;
}

message LoginRequest {
  //@gotags: validate:"required"
  string UserName = 1;
  //@gotags: validate:"required,gte=0"
  string PassWord = 2;
}

message LoginResponse {
   string Token =1;
   int64  ExpireAt = 2;
   int64  RefreshAfter = 3;
}


message MenuList {
  int64 Id = 1;
  int64 ParentId = 2;
  string Name = 3;
  string Path = 4;
  string Component = 5;
  int64 Hidden = 6;
  string Title = 7;
  string Icon = 8;
}

message UserPermissionRequest {
  int64 UserId = 1;
}

message UserPermissionResponse {
  User Userinfo = 1;
  repeated MenuList Menulists = 2;
}

message MenuListRequest {

}

message MenuListResponse {

}

service SystemUser {
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc UserPermission (UserPermissionRequest) returns (UserPermissionResponse);
  rpc MenuList(MenuListRequest) returns (MenuListResponse);
}